--- a/test.css
+++ b/test.css
@@ -1,23 +1,5 @@
 /* FONTS */
 
-/* 100	Thin (Hairline) */
-
-/* 200	Extra Light (Ultra Light) */
-
-/* 300	Light */
-
-/* 400	Normal */
-
-/* 500	Medium */
-
-/* 600	Semi Bold (Demi Bold) */
-
-/* 700	Bold */
-
-/* 800	Extra Bold (Ultra Bold) */
-
-/* 900	Black (Heavy) */
-
 /* junicode */
 
 @font-face {
@@ -135,7 +117,7 @@ a:link, a:visited, a:active {
 
 /* SECTION */
 
-section {
+.section {
     width: 100%;
     /* border-top: 3px dotted aqua; */
     /* border-bottom: 3px dotted blue; */
@@ -176,6 +158,7 @@ body {
     top: 0%;
     z-index: 1;
 }
+/* .hamburger_menu */
 
 .hamburger_menu_overlay {
     height: 100%;
