--- a/styles.css
+++ b/styles.css
@@ -772,8 +772,8 @@ whyChooseUs .items .content {
 .circleDeco {
   display: inline-block;
   margin: 0rem 0.214rem;
-  height: 0.857rem;
-  width: 0.857rem;
+  height: 1rem;
+  width: 1rem;
   content: " ";
   background-color: #999;
   border-radius: 50%;
@@ -786,7 +786,6 @@ whyChooseUs .items .content {
 .tostaoColor,
 #tostaoColor {
   color: goldenrod;
-  /* GoldenRod #DAA520 rgb(218, 165, 32) */
 }
 
 /* GET A QUOTE */
@@ -822,4 +821,166 @@ whyChooseUs .items .content {
   background-color: white;
   border: none;
   border: 1px solid white;
+}
+
+/* BLOG */
+
+.blog .picsContainer {
+  width: 100%;
+  display: inline-flex;
+  flex-wrap: wrap;
+}
+
+.blog .picsContainer .pics,
+.blog .picsContainer .text {
+  width: 25%;
+  position: relative;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: left;
+}
+
+.blog .picsContainer .text {
+  background-color: #eaeaea;
+}
+
+.blog .picsContainer .pics img {
+  width: 100%;
+  height: 100%;
+}
+
+.blog .picsContainer .pics .text h5 {
+  text-transform: capitalize;
+  font-size: 1.429rem;
+  color: white;
+  margin: 0rem 0rem 1.5rem 0rem;
+}
+
+.blog .picsContainer .pics .text h4 {
+  letter-spacing: 0.071rem;
+  font-size: 1.143rem;
+  color: white;
+}
+
+.blog .picsContainer .row {
+  width: 100%;
+  display: inline-flex;
+  flex-wrap: wrap;
+}
+
+.blog .picsContainer .even {
+  flex-direction: row-reverse;
+}
+
+.blog .picsContainer .text .textContent {
+  margin: 1.429rem 1.429rem;
+}
+
+.blog .picsContainer .textContent h5 {
+  text-transform: capitalize;
+  margin: 0rem 0rem 1.389rem 0rem;
+  color: black;
+}
+
+.blog .picsContainer .textContent h4 {
+  letter-spacing: 0.048rem;
+  text-transform: capitalize;
+  font-size: 1.333rem;
+  font-weight: 300;
+  margin: 3rem 0rem 1.389rem 0rem;
+}
+
+.blog .picsContainer .textContent p {
+  margin: 0rem 0rem 2.222rem 0rem;
+  text-align: left;
+}
+
+.blog .picsContainer .textContent a {
+  margin: 0.556rem 0rem 0.833rem 0rem;
+  display: inline-block;
+}
+
+.blog .picsContainer .textContent a h4 {
+  letter-spacing: 0rem;
+  text-transform: uppercase;
+  font-size: 0.889rem;
+  font-weight: 400;
+  display: inline;
+}
+
+/* DECO */
+
+.right_triangle_deco {
+  display: inline-block;
+  border-top: 2.222rem solid transparent;
+  border-bottom: 2.222rem solid transparent;
+  border-left: 2.222rem solid transparent;
+  /* border-right: 2.222rem solid transparent; */
+  /* border-top: 2.222rem solid red; */
+  /* border-bottom: 2.222rem solid greenyellow; */
+  /* border-left: 2.222rem solid blue; */
+  border-right: 2.222rem solid purple;
+  border-right: 2.222rem solid #eaeaea;
+  z-index: 1;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: -7%;
+}
+
+.left_triangle_deco {
+  display: inline-block;
+  border-top: 2.222rem solid transparent;
+  border-bottom: 2.222rem solid transparent;
+  /* border-left: 2.222rem solid transparent; */
+  border-right: 2.222rem solid transparent;
+  /* border-top: 2.222rem solid red; */
+  /* border-bottom: 2.222rem solid greenyellow; */
+  border-left: 2.222rem solid blue;
+  border-left: 2.222rem solid #eaeaea;
+  /* border-right: 2.222rem solid purple; */
+  z-index: 1;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 107%;
+}
+
+.up_triangle_deco {
+  display: inline-block;
+  border-top: 2.222rem solid transparent;
+  /* border-bottom: 2.222rem solid transparent; */
+  border-left: 2.222rem solid transparent;
+  border-right: 2.222rem solid transparent;
+  /* border-top: 2.222rem solid red; */
+  border-bottom: 2.222rem solid greenyellow;
+  border-bottom: 2.222rem solid #eaeaea;
+  /* border-left: 2.222rem solid blue; */
+  /* border-right: 2.222rem solid purple; */
+  z-index: 1;
+  position: absolute;
+  transform: rotate(1deg);
+  transform: translate(-50%, -50%);
+  top: -10%;
+  left: 50%;
+}
+
+.down_triangle_deco {
+  display: inline-block;
+  /* border-top: 2.222rem solid transparent; */
+  border-bottom: 2.222rem solid transparent;
+  border-left: 2.222rem solid transparent;
+  border-right: 2.222rem solid transparent;
+  border-top: 2.222rem solid red;
+  border-top: 2.222rem solid #eaeaea;
+  /* border-bottom: 2.222rem solid greenyellow; */
+  /* border-left: 2.222rem solid blue; */
+  /* border-right: 2.222rem solid purple; */
+  z-index: 1;
+  position: absolute;
+  transform: rotate(1deg);
+  transform: translate(-50%, -50%);
+  top: 110%;
+  left: 50%;
 }
